--- a/reactprojetofinal/package.json
+++ b/reactprojetofinal/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "flowbite-react": "^0.9.0",
+    "primeicons": "^7.0.0",
     "primereact": "^10.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
